[project]
name = "yugabytedb-release-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "mcp[cli]>=1.8.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
