[project]
name = "yugabytedb-release-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.6.2",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "mcp[cli]>=1.8.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
